# predicat

./: Cargo.toml  README.md  data.db  questions.md  settings.vim
.github/workflows/: rust.yml
base_context/: Cargo.toml
base_context/src/: context_traits.rs  lib.rs  simple_context.rs
context/: Cargo.toml
context/src/: base_context.rs  dataframe_context.rs  lib.rs  simple_context.rs
dataframe_context/: Cargo.toml
dataframe_context/src/: lib.rs
knowledge/: Cargo.toml  data.db
knowledge/src/: base_knowledge.rs  lib.rs  sqlite_knowledge.rs
metaprogramming/: Cargo.toml
metaprogramming/src/: lib.rs
parser/: Cargo.toml
parser/src/: base_parser.rs  lib.rs  parse_modifier.rs  parse_query.rs
predicat/: Cargo.toml  README.md  data.db
predicat/src/: .knowledge.rs.swp  data.db  main.rs
schema/: schema.puml  uml.puml  use_case.puml
simple_context/: Cargo.toml
simple_context/src/: lib.rs
src/: context.rs  data.db  importer.rs  knowledge.rs  main.rs  parser.rs  sql.rs
src/knowledge/: base_knowledge.rs  sqlite_knowledge.rs
src/old/: data.db
src/parser/: base_parser.rs  parse_modifier.rs  parse_query.rs
src/parser/parse_modifier/: base_parser.rs
src/parser/parse_query/: base_parser.rs
