[package]
name = "knowledge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
polars = "0.26.1"
sqlite = "0.30.3"
base_context = { path = "../base_context" }
simple_context = { path = "../simple_context" }
itertools = "0.11.0"
serial_test = "2.0.0"
