[package]
name = "knowledge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
metaprogramming = { path = "../metaprogramming" }
sqlite = "0.30.3"
base_context = { path = "../base_context" }
itertools = "0.11.0"
serial_test = "2.0.0"
