[package]
name = "metaprogramming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_context = { path = "../base_context" }
simple_context = { path = "../simple_context" }
parser = { path = "../parser" }
