[package]
name = "predicat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.26.1"
context = { path = "../context" }
knowledge = { path = "../knowledge" }
parser = { path = "../parser" }
importer = { path = "../importer" }
