[package]
name = "predicat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base_context = { path = "../base_context" }
knowledge = { path = "../knowledge" }
parser = { path = "../parser" }
importer = { path = "../importer" }
metaprogramming = { path = "../metaprogramming" }
serial_test = "2.0.0"
